# mediaPlayer_qt

./: .clang-format  .gitignore  CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  playlist.cpp  playlist.h
.cache/clangd/index/: main.cpp.05536B3135B94350.idx  mainwindow.cpp.067B4BE87D150C81.idx  mainwindow.h.9201D15DB4B40C3C.idx  playlist.cpp.67ABF1C4AD69BB66.idx  playlist.h.52C5F25A5ED7AFC8.idx
